--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
