--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "^13.1.6",
+    "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -21,6 +22,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.7.2",
     "typescript": "4.9.5"
   },
